Upgrade to Java 17 (#728)